--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -135,7 +135,9 @@
   
     img {
       max-width: 300px;
+      max-height: 500px;
       border-radius: 15%;
+      background-color: blue;    
   
       @include breakpoint($large) {
         padding: 5px;
