--- a/_includes/top-banner.html
+++ b/_includes/top-banner.html
@@ -1,4 +1,4 @@
-<p class="notice--info">
+<p class="notice--info" style="font-size: 1rem !important;">
     <strong>GitHub 블로그 </strong>
     <br>
     <a href="https://youtube.com/@DohyeonChoi?si=zXkDjMTXRSKNomPA">유튜브 영상</a> 
