--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -138,7 +138,9 @@
       max-height: 500px;
       border-radius: 15%;
       
-  
+    }
+    
+
 .author__content {
   display: table-cell;
   vertical-align: top;
