--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -138,8 +138,12 @@
       max-height: 500px;
       border-radius: 15%;
       
+  
+      @include breakpoint($large) {
+       
+      }
     }
-    
+  }
 
 .author__content {
   display: table-cell;
